[gd_scene load_steps=17 format=3 uid="uid://bvb0uoxhjj7t1"]

[ext_resource type="Script" path="res://host_join_hud.gd" id="1_68g2j"]
[ext_resource type="Texture2D" uid="uid://6pdxggri1u3n" path="res://GameMode/HostJoinMenu.png" id="1_kaor7"]
[ext_resource type="Texture2D" uid="uid://y21wslcshxh0" path="res://GameMode/buttonHost.png" id="2_xxt2o"]
[ext_resource type="Texture2D" uid="uid://b0pswsw12k7xs" path="res://GameMode/buttonJoin.png" id="3_385q7"]
[ext_resource type="Texture2D" uid="uid://4jnsindprf73" path="res://MainMenuAssets/backButton.png" id="5_gnshm"]
[ext_resource type="Texture2D" uid="uid://csrgb7dfapuit" path="res://MainMenuAssets/backButtonHovered.png" id="6_niqqc"]
[ext_resource type="Texture2D" uid="uid://b0b3l8tw320oc" path="res://MainMenuAssets/backButtonClicked.png" id="7_7tw3b"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bhtqd"]
texture = ExtResource("1_kaor7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_62nem"]
texture = ExtResource("2_xxt2o")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s7hc6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g6grl"]
texture = ExtResource("3_385q7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ioovt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ooxd"]
texture = ExtResource("5_gnshm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_favp4"]
texture = ExtResource("6_niqqc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6uw1g"]
texture = ExtResource("7_7tw3b")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ltpih"]

[node name="HostJoinHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_68g2j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxTexture_bhtqd")

[node name="HostButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 223.0
offset_top = 476.0
offset_right = 578.0
offset_bottom = 723.0
theme_override_styles/normal = SubResource("StyleBoxTexture_62nem")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s7hc6")

[node name="JoinButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1339.0
offset_top = 481.0
offset_right = 1689.0
offset_bottom = 739.0
theme_override_styles/normal = SubResource("StyleBoxTexture_g6grl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ioovt")

[node name="backButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 60.0
offset_top = 45.0
offset_right = 260.0
offset_bottom = 200.0
theme_override_styles/normal = SubResource("StyleBoxTexture_2ooxd")
theme_override_styles/hover = SubResource("StyleBoxTexture_favp4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6uw1g")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ltpih")

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 744.0
offset_top = 871.0
offset_right = 1138.0
offset_bottom = 1016.0
theme_override_font_sizes/font_size = 22

[connection signal="pressed" from="Panel/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Panel/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Panel/backButton" to="." method="_on_back_button_pressed"]
